[package]
name = "nctokei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.26.1"
crossterm = "0.24.0"
indexmap = "2.2.6"
clap = { version = "4.5.3", features = ["derive"] }
human_format = "1.1.0"
