[package]
name = "nctok"
version = "0.1.0"
authors = ["UnkwUsr <ktoto2707043@gmail.com>"]
description = "A program for navigating through hierarchical structured data and analyzing them"
repository = "https://github.com/UnkwUsr/nctok"
keywords = ["hierarchy", "tree", "navigation", "menu", "tui", "ncurses", "terminal"]
categories = ["command-line-utilities", "visualization"]
license = "MIT"
edition = "2021"

[dependencies]
ratatui = "0.26.1"
crossterm = "0.24.0"
indexmap = "2.2.6"
clap = { version = "4.5.3", features = ["derive"] }
human_format = "1.1.0"
