[package]
name = "nctok"
version = "0.1.0"
authors = ["UnkwUsr <ktoto2707043@gmail.com>"]
description = """
A program for interactive navigating through weighted hierarchical structured
data and analyzing them. Weighted means that each item have its own value -
number"""
repository = "https://github.com/UnkwUsr/nctok"
keywords = ["hierarchy", "tree", "weighted", "navigation", "tui"]
categories = ["command-line-utilities", "visualization"]
license = "MIT"
edition = "2021"

[dependencies]
ratatui = "0.26.1"
crossterm = "0.24.0"
indexmap = "2.2.6"
clap = { version = "4.5.3", features = ["derive"] }
human_format = "1.1.0"
